removed width 150% to fix header overflow and right cut issue

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -200,7 +200,6 @@ body {
   .top-bar {
     transform: scale(0.6);
     transform-origin: top left;
-    width: 160%;
     padding: 0 10px 0 85px;
   }
 
